# gmg

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  V4_FEATURES.md  app.py  configuration.json.dist  docker-compose.yml  games_empty.sql  migration.php  pyproject.toml  sonar-project.properties  standard.rc
.circleci/: config.yml
.github/workflows/: ci.yml
doc/: API.md  RESOURCES.md  SETUP.md
docker/mysql/: Dockerfile
docker/nginx/: Dockerfile
docker/python/: Dockerfile  Pipfile  requirements.txt
docs/: API.md  MIGRATIONS.md  RESOURCES.md  SETUP.md
migrations/: 4.1.0.sql  4.2.0.sql  4.3.0.sql  4.4.0.sql  5.0.0.sql
src/: app.py
src/connection/: jaeger_factory.py  mysql_factory.py
src/controller/: abstract_controller.py  copy_controller.py  game_controller.py  game_version_magazine_mention_controller.py  games.py  history.py  home.py  magazine_controller.py  magazine_issue_controller.py  magazine_issue_copy_controller.py  note_controller.py  platform_controller.py  platforms.py  story_controller.py  trade.py  trading.py  transaction_controller.py  user.py  user_controller.py  version_controller.py
src/entity/: abstract_entity.py  copy.py  game.py  game_version_magazine_mention.py  history.py  magazine.py  magazine_issue.py  magazine_issue_copy.py  note.py  platform.py  story.py  support.py  trade.py  transaction.py  user.py  version.py
src/exception/: duplicate_consecutive_operation.py  (+14 more)
static/: 500.html
templates/: layout.html
test/: abstract_test.py  abstract_tests.py  abstract_tests_tools.py  games_test.sql
(+76 files in other folders)
